{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 19,
  "lineage": "a2b8ac61-fb4c-87a3-a6d9-9e2a10a1a38c",
  "resources": [
    {
      "module": "module.app_servers[\"api\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0524190ef5414e601",
            "arn": "arn:aws:ec2:af-south-1:520863978567:instance/i-0b8fc74fa6e41a482",
            "associate_public_ip_address": true,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b8fc74fa6e41a482",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kijanikiosk-key-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06087e87fbf546d96"
              }
            ],
            "primary_network_interface_id": "eni-06087e87fbf546d96",
            "private_dns": "ip-172-31-3-130.af-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.130",
            "public_dns": "ec2-13-247-56-35.af-south-1.compute.amazonaws.com",
            "public_ip": "13.247.56.35",
            "region": "af-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02b54fe47b0e38daa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "kijanikiosk-api-staging-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3ca63bc6564cdeb",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "kijanikiosk-api-staging",
              "Service": "api"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "kijanikiosk-api-staging",
              "Service": "api"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-042d0a6fb5aeb77b9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "520863978567",
            "id": "i-0b8fc74fa6e41a482",
            "region": "af-south-1"
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.aws_subnets.available",
            "module.app_servers.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.app_servers[\"api\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:520863978567:security-group/sg-042d0a6fb5aeb77b9",
            "description": "Security group for api server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042d0a6fb5aeb77b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "129.222.147.121/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kijanikiosk-api-staging-sg",
            "name_prefix": "",
            "owner_id": "520863978567",
            "region": "af-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "kijanikiosk-api-staging-sg",
              "Service": "api"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "kijanikiosk-api-staging-sg",
              "Service": "api"
            },
            "timeouts": null,
            "vpc_id": "vpc-098fc9161773f9db2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "520863978567",
            "id": "sg-042d0a6fb5aeb77b9",
            "region": "af-south-1"
          }
        }
      ]
    },
    {
      "module": "module.app_servers[\"logs\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0524190ef5414e601",
            "arn": "arn:aws:ec2:af-south-1:520863978567:instance/i-08b90ab6b358f8ab8",
            "associate_public_ip_address": true,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b90ab6b358f8ab8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kijanikiosk-key-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0257c037f90a04843"
              }
            ],
            "primary_network_interface_id": "eni-0257c037f90a04843",
            "private_dns": "ip-172-31-2-92.af-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.92",
            "public_dns": "ec2-13-246-41-63.af-south-1.compute.amazonaws.com",
            "public_ip": "13.246.41.63",
            "region": "af-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-099c93e8e2a445798",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "kijanikiosk-logs-staging-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3ca63bc6564cdeb",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "kijanikiosk-logs-staging",
              "Service": "logs"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "kijanikiosk-logs-staging",
              "Service": "logs"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dcb2a59de4e83588"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "520863978567",
            "id": "i-08b90ab6b358f8ab8",
            "region": "af-south-1"
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.aws_subnets.available",
            "module.app_servers.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.app_servers[\"logs\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:520863978567:security-group/sg-0dcb2a59de4e83588",
            "description": "Security group for logs server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcb2a59de4e83588",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "129.222.147.121/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kijanikiosk-logs-staging-sg",
            "name_prefix": "",
            "owner_id": "520863978567",
            "region": "af-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "kijanikiosk-logs-staging-sg",
              "Service": "logs"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "kijanikiosk-logs-staging-sg",
              "Service": "logs"
            },
            "timeouts": null,
            "vpc_id": "vpc-098fc9161773f9db2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "520863978567",
            "id": "sg-0dcb2a59de4e83588",
            "region": "af-south-1"
          }
        }
      ]
    },
    {
      "module": "module.app_servers[\"payments\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0524190ef5414e601",
            "arn": "arn:aws:ec2:af-south-1:520863978567:instance/i-046c0f5dc517ca460",
            "associate_public_ip_address": true,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046c0f5dc517ca460",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kijanikiosk-key-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03bef5a9acffc0264"
              }
            ],
            "primary_network_interface_id": "eni-03bef5a9acffc0264",
            "private_dns": "ip-172-31-12-33.af-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.12.33",
            "public_dns": "ec2-16-28-17-186.af-south-1.compute.amazonaws.com",
            "public_ip": "16.28.17.186",
            "region": "af-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c56db0cb957378fb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "kijanikiosk-payments-staging-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a3ca63bc6564cdeb",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "kijanikiosk-payments-staging",
              "Service": "payments"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "kijanikiosk-payments-staging",
              "Service": "payments"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8b3796057808a2b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "520863978567",
            "id": "i-046c0f5dc517ca460",
            "region": "af-south-1"
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.aws_subnets.available",
            "module.app_servers.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.app_servers[\"payments\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:520863978567:security-group/sg-0a8b3796057808a2b",
            "description": "Security group for payments server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8b3796057808a2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "129.222.147.121/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kijanikiosk-payments-staging-sg",
            "name_prefix": "",
            "owner_id": "520863978567",
            "region": "af-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "kijanikiosk-payments-staging-sg",
              "Service": "payments"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "Terraform",
              "Name": "kijanikiosk-payments-staging-sg",
              "Service": "payments"
            },
            "timeouts": null,
            "vpc_id": "vpc-098fc9161773f9db2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "520863978567",
            "id": "sg-0a8b3796057808a2b",
            "region": "af-south-1"
          }
        }
      ]
    }
  ]
}